bugfix eraser function

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <span class="fa fa-window-maximize" aria-hidden="true"></span>
         <input class="toolbox__input" type="color" id="bgColor">
       </label>
-      <button class="toolbox_button" id="grid" type="button" name="button" data-content="Toggle Grid"><span class="fa fa-th-large" aria-hidden="true"></span></button>
+      <button class="toolbox_button" id="grid" type="button" name="button" data-content="Toggle Grid"><span class="fa fa-table" aria-hidden="true"></span></button>
       <button class="toolbox_button" id="eraser" type="button" name="button" data-content="eraser"><span class="fa fa-eraser" aria-hidden="true"></span></button>
       <button class="toolbox_button" id="zoom" type="button" name="button"><span class="fa fa-search" aria-hidden="true" data-content="zoom" disabled></span></button>
     </div>
