deleting consols logs

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </label>
       <button class="toolbox_button" id="grid" type="button" name="button" data-content="Toggle Grid"><span class="fa fa-table" aria-hidden="true"></span></button>
       <button class="toolbox_button" id="eraser" type="button" name="button" data-content="eraser"><span class="fa fa-eraser" aria-hidden="true"></span></button>
-      <button class="toolbox_button" id="zoom" type="button" name="button" data-content="scale"><span class="fa fa-search" aria-hidden="true"></span></button>
+      <button class="toolbox_button" id="zoom" type="button" name="button" data-content="zoom"><span class="fa fa-search" aria-hidden="true"></span></button>
     </div>
   </section>
   <!-- <footer class="footer">
